--- a/toDo
+++ b/toDo
@@ -14,5 +14,6 @@ set the periodic table how to retrain - retrain every 24 hrs
 9 apr 2023 
 give person_id from FE to backend 
 Take os from pi and containerised 
-requirement gathering 
+requirement gathering  
+test
 
